service routing added.

--- a/MS-SCAG-3333/src/main/resources/application.properties
+++ b/MS-SCAG-3333/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.application.name=MS-SCAG-3333
-#server.port=3333
+spring.application.name=SC-API-GATEWAY
+server.port=3333
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka
-#logging.pattern.console=
-#spring.cloud.gateway.discovery.locator.enabled=true
-#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+logging.pattern.console=
 
 # MS-Demo-1001.
-#spring.cloud.gateway.routes.uri=http://localhost:1001/
-#spring.cloud.gateway.routes.predicates.path=/userApi/**
+spring.cloud.gateway.routes.user.uri=http://localhost:1001/userApi/
+spring.cloud.gateway.routes.user.predicates.path=/userApi/**
+
+# MS-Demo-1002.
+spring.cloud.gateway.routes.emp.uri=http://localhost:1002/empApi/
+spring.cloud.gateway.routes.emp.predicates.path=/empApi/**
