Add MS-Demo-1003 application in Spring Cloud API Gateway.

--- a/MS-SCAG-3333/src/main/resources/application.properties
+++ b/MS-SCAG-3333/src/main/resources/application.properties
@@ -3,10 +3,14 @@ server.port=3333
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka
 logging.pattern.console=
 
-# MS-Demo-1001.
+# MS-DEMO-1001.
 spring.cloud.gateway.routes.user.uri=http://localhost:1001/userApi/
 spring.cloud.gateway.routes.user.predicates.path=/userApi/**
 
-# MS-Demo-1002.
+# MS-DEMO-1002.
 spring.cloud.gateway.routes.emp.uri=http://localhost:1002/empApi/
 spring.cloud.gateway.routes.emp.predicates.path=/empApi/**
+
+# MS-DEMO-1002.
+spring.cloud.gateway.routes.demo.uri=http://localhost:1003/demoApi/
+spring.cloud.gateway.routes.demo.predicates.path=/demoApi/**
